--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         header {
             text-align: center;
-            padding: 50px 0;
+            padding: 50px 0 0 0;
         }
         header h1 {
             margin: 0;
@@ -32,6 +32,7 @@
         .contact-info {
             text-align: center;
             margin: 20px 0;
+            padding: 0 0 50px 0;
         }
         .contact-info p {
             margin: 5px 0;
@@ -44,6 +45,10 @@
             padding-bottom: 10px;
             margin-bottom: 20px;
             font-size: 24px;
+        }
+        .ul {
+            list-style-type: disc; /* You can use 'circle', 'square', etc. */
+            margin-left: 0px;
         }
         .timeline, .education, .skills, .languages {
             list-style-type: none;
@@ -62,20 +67,29 @@
         .personal-interests {
             text-align: center;
         }
+        
+        .profile {
+            font-style: italic; /* Italicizes the text */
+            margin-left: 10%; /* Responsive left margin */
+            margin-right: 10%; /* Responsive right margin */
+            line-height: 1.5;
+        }
     </style>
 </head>
 <body>
-
+    <img src="src/photo.jpg" alt="barlian photo">
     <div class="container">
         <header>
             <h1>Barlian Gumay</h1>
-            <p>A highly efficient, hardworking, and passionate engineer with a comprehensive understanding of design & manufacturing processes, as well as computational engineering.</p>
+            <p class="profile">
+                A highly efficient, hardworking, and passionate engineer with a comprehensive understanding of design & manufacturing processes, as well as computational engineering.
+            </p>
         </header>
 
         <div class="contact-info">
-            <p>Phone: +49 152 3797 0272</p>
+            <p>Phone: +49 172 2730 478</p>
             <p>Email: barlian.gumay@gmail.com</p>
-            <p>Location: 75181 Pforzheim, Germany</p>
+            <p>Location: 71638 Ludwigsburg, Germany</p>
             <p>Date of Birth: 06.06.1990</p>
         </div>
 
@@ -86,27 +100,33 @@
                 <li class="timeline-item">
                     <div class="timeline-item-content">
                         <h3>Digital System Engineer at FLUX-GERÄTE GmbH</h3>
-                        <span>February 2023 – Present</span>
-                        <p>Develop and implement IIoT solutions and connectivity protocols to collect real-time data.</p>
-                        <p>Design and deploy AI/ML based production planning.</p>
+                        <span><i>February 2023 – Present</i></span>
+                        <ul>
+                            <p><li>Develop and implement IIoT solutions and connectivity protocols to collect real-time data.</li></p>
+                            <p><li>Design and deploy AI/ML based production planning.</li></p>
+                        </ul>
                     </div>
                 </li>
                 <li class="timeline-item">
                     <div class="timeline-item-content">
                         <h3>Technical Project Manager at MAXXTEC</h3>
-                        <span>March 2018 – September 2019</span>
-                        <p>Managed the development, implementation, and evaluation of projects in industrial processes.</p>
-                        <p>Evaluated changes that substantially impacted project scope, budget, or schedule.</p>
-                        <p>Monitored progress and performance against the project plan.</p>
+                        <span><i>March 2018 – September 2019</i></span>
+                        <ul>
+                        <p><li>Managed the development, implementation, and evaluation of projects in industrial processes.</li></p>
+                        <p><li>Evaluated changes that substantially impacted project scope, budget, or schedule.</li></p>
+                        <p><li>Monitored progress and performance against the project plan.</li></p>
+                        </ul>
                     </div>
                 </li>
                 <li class="timeline-item">
                     <div class="timeline-item-content">
                         <h3>Project Execution Lead at SIEMENS</h3>
-                        <span>March 2014 – March 2018</span>
-                        <p>Joined SIEMENS through Graduate Trainee Program.</p>
-                        <p>Led multifunctional teams in timely project execution.</p>
-                        <p>Developed strategies to decrease NCC, improve quality, drive down costs, and ensure on-time delivery.</p>
+                        <span><i>March 2014 – March 2018</i></span>
+                        <ul>
+                        <p><li>Joined SIEMENS through Graduate Trainee Program.</li></p>
+                        <p><li>Led multifunctional teams in timely project execution.</li></p>
+                        <p><li>Developed strategies to decrease NCC, improve quality, drive down costs, and ensure on-time delivery.</li></p>
+                        </ul>
                     </div>
                 </li>
             </ul>
@@ -122,7 +142,7 @@
                         <span>2019 – 2022</span>
                         <p>Master of Science (M.Sc) in Computational Modelling & Simulation</p>
                         <p>Sub-track: Computational Engineering</p>
-                        <p>Main modules: CFD, FEM, HPC, Stochastic modelling, Machine Learning</p>
+                        <p><i>Main modules: CFD, FEM, HPC, Stochastic modelling, Machine Learning</i></p>
                     </div>
                 </li>
                 <li class="education-item">
@@ -130,7 +150,7 @@
                         <h3>Universitas Gadjah Mada (UGM)</h3>
                         <span>2011 – 2013</span>
                         <p>Master of Engineering (M.Eng) in Mechanical Engineering</p>
-                        <p>Main modules: Fluid Mechanics, Two phase flow, Energy Conversion</p>
+                        <p><i>Main modules: Fluid Mechanics, Two phase flow, Energy Conversion</i></p>
                     </div>
                 </li>
                 <li class="education-item">
@@ -138,7 +158,7 @@
                         <h3>Universitas Gadjah Mada (UGM)</h3>
                         <span>2008 – 2012</span>
                         <p>Bachelor of Engineering (B.Eng) in Engineering Physics</p>
-                        <p>Main modules: Nuclear Engineering, Thermal-hydraulics, Simulation</p>
+                        <p><i>Main modules: Nuclear Engineering, Thermal-hydraulics, Simulation</i></p>
                     </div>
                 </li>
             </ul>
