--- a/index.html
+++ b/index.html
@@ -129,8 +129,13 @@
                         <h3>Digital System Engineer at FLUX-GERÄTE GmbH</h3>
                         <span><i>February 2023 – Present</i></span>
                         <ul>
-                            <p><li>Develop and implement IIoT solutions and connectivity protocols to collect real-time data.</li></p>
-                            <p><li>Design and deploy AI/ML based production planning.</li></p>
+                            <li><strong>IIoT Development:</strong> Spearheaded the development of state-of-the-art Industrial Internet of Things (IIoT) solutions, enabling real-time data collection and analysis for enhanced decision-making in manufacturing processes.</li>
+                            <li><strong>Dashboard & BDE Portal:</strong> Designed and implemented a robust Production Data Acquisition (BDE) platform and dashboard, providing stakeholders with actionable insights into manufacturing operations and performance.</li>
+                            <li><strong>ERP Integration:</strong> Integrated ERP databases with advanced model analysis tools, streamlining data flow and facilitating more accurate forecasting and optimization.</li>
+                            <li><strong>Production Data Analysis:</strong> Conducted in-depth analysis of production data, identifying key performance indicators (KPIs) and driving process improvements to maximize efficiency and quality.</li>
+                            <li><strong>Energy Consumption Management:</strong> Led initiatives to measure and optimize energy consumption, contributing to sustainability goals and reducing operational costs.</li>
+                            <li><strong>AI/ML Production Planning:</strong> Developed and implemented AI and Machine Learning-based production planning solutions, optimizing resource allocation, and minimizing production bottlenecks.</li>
+                            <li><strong>Digital Twin Concept:</strong> Pioneered the practical implementation of the digital twin concept in supply chain management, enhancing visibility, traceability, and responsiveness throughout the supply chain.</li>
                         </ul>
                     </div>
                 </li>
