--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
         .personal-interests {
             text-align: center;
         }
-        
         .profile {
             font-style: italic; /* Italicizes the text */
             margin-left: 10%; /* Responsive left margin */
@@ -90,8 +89,6 @@
             justify-content: center;
             align-items: center;
         }
-
-        /* Style the image */
         .circle-frame img {
             width: 100%; /* Scales the image to fit the width of the circle */
             height: auto; /* Keeps the aspect ratio */
@@ -129,14 +126,16 @@
                         <h3>Digital System Engineer at FLUX-GERÄTE GmbH</h3>
                         <span><i>February 2023 – Present</i></span>
                         <ul>
-                            <li><strong>IIoT Development:</strong> Spearheaded the development of state-of-the-art Industrial Internet of Things (IIoT) solutions, enabling real-time data collection and analysis for enhanced decision-making in manufacturing processes.</li>
-                            <li><strong>Dashboard & BDE Portal:</strong> Designed and implemented a robust Production Data Acquisition (BDE) platform and dashboard, providing stakeholders with actionable insights into manufacturing operations and performance.</li>
-                            <li><strong>ERP Integration:</strong> Integrated ERP databases with advanced model analysis tools, streamlining data flow and facilitating more accurate forecasting and optimization.</li>
-                            <li><strong>Production Data Analysis:</strong> Conducted in-depth analysis of production data, identifying key performance indicators (KPIs) and driving process improvements to maximize efficiency and quality.</li>
-                            <li><strong>Energy Consumption Management:</strong> Led initiatives to measure and optimize energy consumption, contributing to sustainability goals and reducing operational costs.</li>
-                            <li><strong>AI/ML Production Planning:</strong> Developed and implemented AI and Machine Learning-based production planning solutions, optimizing resource allocation, and minimizing production bottlenecks.</li>
-                            <li><strong>Digital Twin Concept:</strong> Pioneered the practical implementation of the digital twin concept in supply chain management, enhancing visibility, traceability, and responsiveness throughout the supply chain.</li>
+                            <p><li><strong>IIoT Development:</strong> Spearheaded the development of state-of-the-art Industrial Internet of Things (IIoT) solutions, enabling real-time data collection and analysis for enhanced decision-making in manufacturing processes.</li></p>
+                            <p><li><strong>Dashboard & BDE Portal:</strong> Designed and implemented a robust Production Data Acquisition (BDE) platform and dashboard, providing stakeholders with actionable insights into manufacturing operations and performance.</li></p>
+                            <p><li><strong>ERP Integration:</strong> Integrated ERP databases with advanced model analysis tools, streamlining data flow and facilitating more accurate forecasting and optimization.</li></p>
+                            <p><li><strong>Production Data Analysis:</strong> Conducted in-depth analysis of production data, identifying key performance indicators (KPIs) and driving process improvements to maximize efficiency and quality.</li></p>
+                            <p><li><strong>Energy Consumption Management:</strong> Led initiatives to measure and optimize energy consumption, contributing to sustainability goals and reducing operational costs.</li></p>
+                            <p><li><strong>AI/ML Production Planning:</strong> Developed and implemented AI and Machine Learning-based production planning solutions, optimizing resource allocation, and minimizing production bottlenecks.</li></p>
+                            <p><li><strong>Digital Twin Concept:</strong> Pioneered the practical implementation of the digital twin concept in supply chain management, enhancing visibility, traceability, and responsiveness throughout the supply chain.</li></p>
                         </ul>
+                        <span><strong>Knowledge:</i></strong>
+                        <span><i>OPC-UA, MQTT, InfluxDB, Grafana, Node-RED, Javascript, SQL, Python, Node.js, React native, EXPO, ERP (proALPHA), BI (Qlik).</i></span>
                     </div>
                 </li>
                 <li class="timeline-item">
@@ -204,7 +203,7 @@
                     <p>Ms. Office (++ Ms. Project)</p>
                 </li>
                 <li class="skill-item">
-                    <p>MATLAB, SQL, Python, Javascript</p>
+                    <p>MATLAB, SQL, Python, Javascript, OPC-UA, MQTT, InfluxDB, Grafana, Node-RED, Node.js, Vue, React native, EXPO</p>
                 </li>
                 <li class="skill-item">
                     <p>ANSYS, OpenFOAM, ABAQUS, SIMULIA, SOLIDWORKS</p>
