--- a/index.html
+++ b/index.html
@@ -200,16 +200,16 @@
             <h2>Software & Programming Skills</h2>
             <ul class="skills">
                 <li class="skill-item">
-                    <p>Ms. Office (++ Ms. Project)</p>
+                    <p><strong>General: </strong>Ms. Office (++ Ms. Project)</p>
                 </li>
                 <li class="skill-item">
-                    <p>MATLAB, SQL, Python, Javascript, OPC-UA, MQTT, InfluxDB, Grafana, Node-RED, Node.js, Vue, React native, EXPO</p>
+                    <p><strong>DevOps: </strong>MATLAB, SQL, Python, Javascript, Docker, OPC-UA, MQTT, InfluxDB, Grafana, Node-RED, Node.js, Vue, React native, EXPO, Microsoft Azure</p>
                 </li>
                 <li class="skill-item">
-                    <p>ANSYS, OpenFOAM, ABAQUS, SIMULIA, SOLIDWORKS</p>
+                    <p><strong>CAD & CAE: </strong>ANSYS, OpenFOAM, ABAQUS, SIMULIA, SOLIDWORKS</p>
                 </li>
                 <li class="skill-item">
-                    <p>SAP (MM & PP), proALPHA</p>
+                    <p><strong>ERP & BI: </strong>SAP (MM & PP), proALPHA</p>
                 </li>
             </ul>
         </section>
