--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     <p><strong>CAD & CAE: </strong>ANSYS, OpenFOAM, ABAQUS, SIMULIA, SOLIDWORKS</p>
                 </li>
                 <li class="skill-item">
-                    <p><strong>ERP & BI: </strong>SAP (MM & PP), proALPHA</p>
+                    <p><strong>ERP & BI: </strong>SAP (MM & PP), proALPHA, Qlik Sense, Grafana</p>
                 </li>
             </ul>
         </section>
