--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <ul class="timeline">
                 <li class="timeline-item">
                     <div class="timeline-item-content">
-                        <h3>Digital System Engineer at FLUX-GERÄTE GmbH</h3>
+                        <h3>System Engineer - Digital Transformation in Manufacturing at FLUX-GERÄTE GmbH</h3>
                         <span><i>February 2023 – Present</i></span>
                         <ul>
                             <p><li><strong>IIoT Development:</strong> Spearheaded the development of state-of-the-art Industrial Internet of Things (IIoT) solutions, enabling real-time data collection and analysis for enhanced decision-making in manufacturing processes.</li></p>
