--- a/index.html
+++ b/index.html
@@ -94,12 +94,28 @@
             height: auto; /* Keeps the aspect ratio */
             display: block;
         }
+        .qr-code {
+            width: calc(200px * 0.5); /* 30% of the picture's size */
+            height: calc(200px * 0.5); /* 30% of the picture's size */
+            position: absolute;
+            right: 0;
+            transform: translateY(-50%);
+        }
+
+        .qr-code img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
     </style>
 </head>
 <body>
     <div class="container-photo">
         <div class="circle-frame">
             <img src="https://barliangumay.github.io/src/photo.jpg" alt="barlian photo">
+        </div>
+        <div class="qr-code">
+            <img src="https://barliangumay.github.io/src/CV_Barlian.png" alt="QR Code">
         </div>
     </div>
     <div class="container">
