--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
                         <p><li>Evaluated changes that substantially impacted project scope, budget, or schedule.</li></p>
                         <p><li>Monitored progress and performance against the project plan.</li></p>
                         </ul>
+                        <span><strong>Field:</i></strong>
+                        <span><i>Renewable energy, industrial process, project management, manufacturing.</i></span>
                     </div>
                 </li>
                 <li class="timeline-item">
@@ -177,6 +179,8 @@
                         <p><li>Led multifunctional teams in timely project execution.</li></p>
                         <p><li>Developed strategies to decrease NCC, improve quality, drive down costs, and ensure on-time delivery.</li></p>
                         </ul>
+                        <span><strong>Field:</i></strong>
+                        <span><i>Steam and gas turbine, manufacturing, quality management, project execution.</i></span>
                     </div>
                 </li>
             </ul>
