--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             width: calc(200px * 0.5); /* 30% of the picture's size */
             height: calc(200px * 0.5); /* 30% of the picture's size */
             position: absolute;
-            right: 0;
+            right: 20px;
             transform: translateY(-50%);
         }
 
