--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
     <div class="container">
         <header>
             <h1>Barlian Gumay</h1>
-            <span>
+            <span><p>
                 Computational Engineering | Simulation | Digital Twin | IIoT | AI | Smart Manufacturing
-            </span>
+            </p></span>
             <p class="profile">
                 A highly efficient, hardworking, and passionate engineer with a comprehensive understanding of design & manufacturing processes, as well as computational engineering.
             </p>
