--- a/index.html
+++ b/index.html
@@ -101,11 +101,31 @@
             right: 20px;
             transform: translateY(-50%);
         }
-
         .qr-code img {
             width: 100%;
             height: 100%;
             object-fit: contain;
+        }
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .qr-code {
+                width: calc(150px * 0.5);
+                height: calc(150px * 0.5);
+            }
+        }
+        @media (max-width: 480px) {
+            .qr-code {
+                width: calc(100px * 0.3);
+                height: calc(100px * 0.3);
+                right: 10px; /* Adjust position on smaller screens */
+            }
+        }
+        @media (max-width: 320px) {
+            .qr-code {
+                width: calc(50px * 0.3);
+                height: calc(50px * 0.3);
+                right: 5px; /* Adjust position on smaller screens */
+            }
         }
     </style>
 </head>
