--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
                         <h3>Technical Project Manager at MAXXTEC</h3>
                         <span><i>March 2018 – September 2019</i></span>
                         <ul>
-                        <p><li>Managed the development, implementation, and evaluation of projects in industrial processes.</li></p>
-                        <p><li>Evaluated changes that substantially impacted project scope, budget, or schedule.</li></p>
-                        <p><li>Monitored progress and performance against the project plan.</li></p>
+                        <p><li>Managed project lifecycles, overseeing technical concepts, contract terms, process diagrams, and design specifications for energy-efficient and renewable energy plants.</li></p>
+                        <p><li>Coordinated time schedules, part lists, order specifications, and approval documents, while ensuring quality control, deadline adherence, and budget compliance.</li></p>
+                        <p><li>Provided technical guidance to customers, suppliers, and external manufacturers, addressing technical issues and ensuring smooth project execution.</li></p>
                         </ul>
                         <span><strong>Field:</i></strong>
                         <span><i>Renewable energy, industrial process, project management, manufacturing.</i></span>
@@ -195,9 +195,9 @@
                         <h3>Project Execution Lead at SIEMENS</h3>
                         <span><i>March 2014 – March 2018</i></span>
                         <ul>
-                        <p><li>Joined SIEMENS through Graduate Trainee Program.</li></p>
-                        <p><li>Led multifunctional teams in timely project execution.</li></p>
-                        <p><li>Developed strategies to decrease NCC, improve quality, drive down costs, and ensure on-time delivery.</li></p>
+                        <p><li>Led multi-functional teams as Project Manager for Siemens gas and steam turbine projects, overseeing the combustion chamber and LP steam turbine assembly, focusing on cost, quality, and timely delivery.</li></p>
+                        <p><li>Spearheaded business process improvements in steam turbine manufacturing, enhancing operational efficiency through cross-departmental collaboration and SAP integration.</li></p>
+                        <p><li>Gained extensive international experience through Siemens ASEAN-Pacific Engineering Graduate Program, acquiring skills in project management, supply chain, and cross-cultural communication.</li></p>
                         </ul>
                         <span><strong>Field:</i></strong>
                         <span><i>Steam and gas turbine, manufacturing, quality management, project execution.</i></span>
